điều chỉnh các lỗi thông báo, danh mục, chính sách giá, RAG